fix: remove server.browser.js in favor of export mapping to server

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
       "require": "./index.js"
     },
     "./server": {
-      "browser": "./server.browser.js",
+      "module": "./server.mjs",
+      "import": "./server.mjs",
+      "require": "./server.js"
+    },
+    "./server.browser": {
       "module": "./server.mjs",
       "import": "./server.mjs",
       "require": "./server.js"
