Add server.edge entry to package.json

--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
       "import": "./server.mjs",
       "require": "./server.js"
     },
+    "./server.edge": {
+      "module": "./server.mjs",
+      "import": "./server.mjs",
+      "require": "./server.js"
+    },
     "./client": {
       "import": "./client.mjs",
       "require": "./client.js"
